--- a/calc.html
+++ b/calc.html
@@ -16,7 +16,33 @@
                   span.innerHTML =result //Setter
                   span.style.color="green"
         }
-    </script>
+
+        function doSub(){
+            var num1 = document.getElementById("ip1").value;
+            var num2 = document.getElementById("ip2").value;
+            var result = Number(num1)-Number(num2);
+            var span = document.getElementById("res");
+                  span.innerHTML =result ;
+                  span.style.color="green";
+        }
+
+        function doMult(){
+            var num1 = document.getElementById("ip1").value;
+            var num2 = document.getElementById("ip2").value;
+            var  result = Number(num1)*Number(num2);
+            var span = document.getElementById("res");
+                  span.innerHTML =result;
+                  span.style.color="green";
+        }
+ function doDiv(){
+     var num1 = document.getElementById("ip1").value;
+     var num2 = document.getElementById("ip2").value;
+     var result = Number(num1) / Number(num2);
+     var span = document.getElementById("res");
+     span.innerHTML = result;
+     span.style.color="green";
+ }
+ </script>
 </head>
 <body>
     Number1: <input type="number" id="ip1"> <br><br>
